# mongodb-api-transaction-test-example

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: beanie_patch.py  context.py  db.py  deps.py  main.py  models.py  repo.py
src/: beanie_patch.py  config.py  database.py  dependencies.py  main.py
src/users/: models.py  router.py  schemas.py  service.py
tests/: beanie_patch.py  conftest.py  test_users.py
